# storage-analysis

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: models.py  scheduler.py
src/clients/: hetzner.py  truenas.py
src/db/: database.py  repository.py
src/web/: app.py
src/web/templates/: index.html
tests/: conftest.py  test_hetzner_client.py  test_repository.py  test_truenas_client.py  test_web.py
